<resources>
    <string name="app_name">Acuvisor</string>
    <string name="help">Help</string>
    <string name="acuvisor">Acuvisor</string>
    <string name="next">Next</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="bangla">Bangla</string>
    <string name="gujarati">Gujarati</string>
    <string name="marathi">Marathi</string>
    <string name="kannada">Kannada</string>
    <string name="tamil">Tamil</string>
    <string name="telugu">Telugu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide1_heading">Never Miss an opportunity to be your own boss!</string>
    <string name="slide1_decs">We are here to get you on the road to becoming financially independent.</string>
    <string name="slide2_heading">Qualifications?<br>Let us sort that out for you.</br></string>
    <string name="slide2_decs">Our training program teaches you all you have to know about insurance.</string>
    <string name="slide3_heading">Get ready<br>to start selling!</br></string>
    <string name="slide3_decs">Our app will guide you on how to and who to sell. Ready? You have got this!</string>
    <string name="start">Let\'s Start</string>
    <string name="full_name">Full Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="num">9557731296</string>
    <string name="johndoe_mail_com">johndoe@mail.com</string>
    <string name="adhaar_card">Adhaar Card</string>
    <string name="submit">Submit</string>
    <string name="back_button">back_button</string>
    <string name="john_doe">John Doe</string>
    <string name="verification_code">Verification Code</string>
    <string name="card_plain">Take Photo or</string>
    <string name="browse">Browse</string>
    <string name="enter_your_4_digit_code">ENTER Your 4 Digit Code</string>
    <string name="otp_expired">OTP Will be Expired in</string>
    <string name="don_t_receive_the_code">DON\'T RECEIVED THE CODE?</string>
    <string name="resend">RESEND</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_profile_is_verified">Your Profile is Verified</string>
    <string name="home">Home</string>
    <string name="modules">Modules</string>
    <string name="score">Score</string>
    <string name="notification">Notification</string>
    <string name="hi_john">Hi, John</string>
    <string name="desc">What would you like to learn today? Search below.</string>
    <string name="pod_head">Learn About Life Insurance from Industry Experts</string>
    <string name="listen_podcast">Listen to our podcast</string>
    <string name="mic">mic</string>
    <string name="podcast_man">podcast_man</string>
    <string name="life_insurance">Life Insurance</string>
    <string name="time">15 hours</string>
    <string name="e_mail">E-Mail</string>
    <string name="title_activity_slide1">Slide1</string>
    <string name="country_code">+91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="error">An error occured</string>
    <string name="sending">Sending OTP.......</string>
</resources>