<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:onClick="goToLanguage"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo_title"
        android:layout_below="@id/backArrow"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_below="@id/imageView" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/solid_box"
        android:ems="10"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/john_doe"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:layout_below="@id/name"/>

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/contact_no"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_below="@id/nameEdit"/>

    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/contact">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textStyle="bold"
            android:background="#B8B8B8"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/country_code" />

        <EditText
            android:id="@+id/contEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/solid_box"
            android:ems="10"
            android:fontFamily="@font/nunito_light"
            android:hint="@string/num"
            android:inputType="phone"
            android:padding="12dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_below="@id/phone"/>

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/solid_box"
        android:ems="10"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/johndoe_mail_com"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_below="@id/email"/>


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/emailEdit"
        android:background="?android:attr/listDivider" />


    <TextView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@id/divider2"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/adhaar_card"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/card"
        android:background="@drawable/dashed_box"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/dashed_box"
            android:padding="15dp"
            android:src="@drawable/outline_file_upload_24" />

        <TextView
            android:id="@+id/cardPlain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:paddingVertical="15dp"
            android:paddingStart="20dp"
            android:text="@string/card_plain" />

        <TextView
            android:id="@+id/cardEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:ems="10"
            android:paddingVertical="15dp"
            android:text="@string/browse"
            android:onClick="onBrowse"
            android:textColor="#2196F3" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_color"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>