<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:src="@drawable/bg"
        android:layout_above="@id/contact"/>


    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/contEdit"/>

        <EditText
            android:id="@+id/contEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/solid_box"
            android:ems="10"
            android:layout_centerInParent="true"
            android:fontFamily="@font/nunito_light"
            android:hint="@string/num"
            android:inputType="phone"
            android:padding="12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/contEdit"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/button_color2"
        android:textColor="@color/white"
        android:textSize="18sp"/>



</RelativeLayout>