<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Verification">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/back_button"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="@color/black" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/nunito_bold"
        android:padding="15dp"
        android:text="@string/verification_code"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/shaded"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            android:padding="15dp"
            android:text="@string/enter_your_4_digit_code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp">


            <EditText
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/otp_box"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:ignore="LabelFor"
                tools:text="5" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/otp_box"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:ignore="LabelFor"
                tools:text="5" />


            <EditText
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/otp_box"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:ignore="LabelFor"
                tools:text="5" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/otp_box"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:ignore="LabelFor"
                tools:text="5" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_color"
            android:paddingHorizontal="60dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            android:paddingVertical="10dp"
            android:text="@string/otp_expired"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextClock
            android:id="@+id/txtClok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            android:format24Hour="mm:ss"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:textColor="#2196F3"
            tools:text="09:54" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingBottom="12dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_light"
                android:paddingVertical="10dp"
                android:text="@string/don_t_receive_the_code"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_light"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/resend"
                android:textAlignment="center"
                android:textColor="#2196F3"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
